[package]
name = "hyperswarm"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Frando/hyperswarm"
documentation = "https://docs.rs/hyperswarm"
description = "Peer to peer networking stack"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Franz Heinzmann <franz@arso.xyz>"
]

[features]

[dependencies]
hyperswarm-dht = { git = "https://github.com/Frando/hyperswarm-dht.git", branch = "hyperspace" }
async-std = { version = "1.9.0", features = ["unstable"] }
futures-lite = "1.11.3"
futures-channel = "0.3.13"
log = "0.4.14"
futures = "0.3.13"

[dev-dependencies]
env_logger = "0.8.3"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }

[patches.crates-io]
hyperswarm-dht = { path = "../hyperswarm-dht" }
