[package]
name = "hyperswarm"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/hyperswarm-rs"
documentation = "https://docs.rs/hyperswarm"
description = "Peer to peer networking stack"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Franz Heinzmann <franz@arso.xyz>"
]

[features]
default = ["transport_utp"]
transport_utp = ["libutp-rs"]

[dependencies]
async-std = { version = "1.9.0", features = ["unstable"] }
futures-lite = "1.11.3"
futures-channel = "0.3.13"
log = "0.4.14"
futures = "0.3.13"
multicast-socket = "0.2.1"
hex = "0.4.3"
pretty-hash = "0.4.1"
hyperswarm-dht = { git = "https://github.com/datrs/hyperswarm-dht.git", branch = "hyperspace" }
# hyperswarm-dht = { path = "../hyperswarm-dht" }
colmeia-hyperswarm-mdns = { git = "https://github.com/bltavares/colmeia.git", rev = "53761799f7a9ee123875534e0108d7483a117885" }
libutp-rs = { git = "https://github.com/Frando/libutp-rs.git", branch = "feat/clone2", optional = true }
async-trait = "0.1.53"
async-compat = "0.2.1"
blake2-rfc = "0.2.18"

[dev-dependencies]
env_logger = "0.8.3"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
rand = "0.8.3"
blake2-rfc = "0.2.18"
anyhow = "1.0.56"
clap = { version = "3.1.7", features = ["derive"] }

# [patch.crates-io]
# hyperswarm-dht = { path = "../hyperswarm-dht" }
# libutp-rs = { path = "../libutp-rs" }
