[package]
name = "hyperswarm-bootstrap"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperswarm = { path = "..", default-features = false }
async-std = { version = "1.9.0", features = ["unstable"] }
env_logger = "0.8.3"
log = "0.4.14"
anyhow = "1.0.39"
clap = { version = "3.1.7", features = ["derive"] }
